# qwen-memory-agent

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  README.md  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: publish.yml
demo/: run_demo.py
docs/: architecture.mmd
docs/adr/: 0001-host-agnostic-hook-memory.md
docs/agents/: domain.md
docs/submission/: demo-script.md  devpost.md
docs/submission/recording/: README.md  inner.sh  orch.sh
installer/: install_claude_code.py
qmem/: __main__.py  cli.py  config.py  setup_hooks.py
qmem/adapters/: claude_code.py
qmem/daemon/: app.py  harvest.py  inject.py  manifest.py  reflect.py
qmem/demo/: scenario.py  viz.py
qmem/llm/: provider.py
qmem/store/: memory.py  scoring.py
qmem/verify/: package_reader.py  verifier.py
tests/: conftest.py  test_adapter.py  test_demo.py  test_harvest.py  test_provider.py  test_recall.py  test_reflect.py  test_session_start.py  test_store_crud.py  test_user_prompt.py  test_verify_a.py  test_verify_b.py
