[project]
name = "qwen-memory-agent"
version = "0.1.0"
description = "Host-agnostic, self-correcting library/API memory daemon for coding agents (Qwen MemoryAgent)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Mrbaeksang", email = "qortkdgus95@gmail.com" }]
keywords = ["claude", "claude-code", "memory", "agent", "qwen", "llm", "hooks", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "openai>=1.40",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/Mrbaeksang/qwen-memory-agent"
Repository = "https://github.com/Mrbaeksang/qwen-memory-agent"
Issues = "https://github.com/Mrbaeksang/qwen-memory-agent/issues"

[project.scripts]
qmem = "qmem.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qmem"]
